serve spec
